<resources>
    <string name="app_name">SecurityProject</string>
    <string name="username">Username</string>
    <string name="sing_in">Sing in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="hello">Hello!</string>
    <string name="invalid_cred">Invalid username or password!</string>
    <string name="user_exist">User is already exist!</string>
    <string name="loading">Loading!</string>
</resources>