<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size28"
        app:layout_constraintBottom_toTopOf="@id/et_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/registration"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/text24"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/size8"
        android:background="@color/et_purple"
        android:padding="@dimen/size8"
        android:hint="@string/username"
        android:textColorHint="@color/white"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size8"
        android:layout_marginTop="@dimen/size8"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/et_purple"
        android:padding="@dimen/size8"
        android:hint="@string/password"
        android:textColorHint="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sing_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size128"
        android:layout_marginTop="@dimen/size8"
        android:gravity="center"
        android:paddingVertical="@dimen/size8"
        android:paddingHorizontal="@dimen/size24"
        android:background="@color/purple"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>